Adds HTTP client for java runtime, enables backends to use it.
PiperOrigin-RevId: 620959544