@@ -15,6 +15,7 @@ limitations under the License
 
 package org.genc.authoring;
 
+import com.google.common.collect.ImmutableMap;
 import com.google.protobuf.ExtensionRegistryLite;
 import com.google.protobuf.InvalidProtocolBufferException;
 import java.io.FileInputStream;
@@ -22,6 +23,7 @@ import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import javax.annotation.Nullable;
 import org.genc.Value;
 import org.genc.runtime.ToFromValueProto;
 
@@ -36,7 +38,7 @@ public final class Constructor {
     return ExtensionRegistryLite.getEmptyRegistry();
   }
 
-  // @Nullable
+  @Nullable
   public static Value readComputationFromFile(String filePath) {
     try {
       InputStream stream = new FileInputStream(filePath);
@@ -49,7 +51,7 @@ public final class Constructor {
   }
 
   // Creates a model computation with the given model URI.
-  // @Nullable
+  @Nullable
   public static Value createModelInference(String modelUri) {
     try {
       byte[] value = nativeCreateModelInference(modelUri);
@@ -63,7 +65,7 @@ public final class Constructor {
   }
 
   // Returns a model inference proto with the given model URI and model config.
-  // @Nullable
+  @Nullable
   public static Value createModelInferenceWithConfig(String modelUri, Value modelConfig) {
     try {
       byte[] value = nativeCreateModelInferenceWithConfig(modelUri, modelConfig.toByteArray());
@@ -77,7 +79,7 @@ public final class Constructor {
   }
 
   // Creates a prompt template computation with the given template string.
-  // @Nullable
+  @Nullable
   public static Value createPromptTemplate(String templateStr) {
     try {
       byte[] value = nativeCreatePromptTemplate(templateStr);
@@ -91,7 +93,7 @@ public final class Constructor {
   }
 
   // Creates an InjaTemplate.
-  // @Nullable
+  @Nullable
   public static Value createInjaTemplate(String templateStr) {
     try {
       byte[] value = nativeCreateInjaTemplate(templateStr);
@@ -106,7 +108,7 @@ public final class Constructor {
 
   // Creates a fallback expression from a given list of functions. The first
   // successful one is the result; if failed, keep going down the list.
-  // @Nullable
+  @Nullable
   public static Value createFallback(List<Value> functionList) {
     try {
       List<byte[]> serializedFunctionList = new ArrayList<byte[]>();
@@ -125,7 +127,7 @@ public final class Constructor {
 
   // Creates a conditional expression. condition evaluates to a boolean, if true,
   // positive_branch will be executed, else negative_branch.
-  // @Nullable
+  @Nullable
   public static Value createConditional(
       Value condition, Value positiveBranch, Value negativeBranch) {
     try {
@@ -142,7 +144,7 @@ public final class Constructor {
   }
 
   // Returns a custom function proto with the given fn URI.
-  // @Nullable
+  @Nullable
   public static Value createCustomFunction(String fnUri) {
     try {
       byte[] value = nativeCreateCustomFunction(fnUri);
@@ -156,7 +158,7 @@ public final class Constructor {
   }
 
   // Creates a parallel map that applies map_fn to a all input values.
-  // @Nullable
+  @Nullable
   public static Value createParallelMap(Value mapFn) {
     try {
       byte[] value = nativeCreateParallelMap(mapFn.toByteArray());
@@ -170,7 +172,7 @@ public final class Constructor {
   }
 
   // Given a list of functions [f, g, ...] create a chain g(f(...)).
-  // @Nullable
+  @Nullable
   public static Value createSerialChain(List<Value> functionList) {
     try {
       List<byte[]> serializedFunctionList = new ArrayList<byte[]>();
@@ -188,7 +190,7 @@ public final class Constructor {
   }
 
   // Constructs a function call.
-  // @Nullable
+  @Nullable
   public static Value createCall(Value fn, Value arg) {
     try {
       byte[] value = nativeCreateCall(fn.toByteArray(), arg.toByteArray());
@@ -202,7 +204,7 @@ public final class Constructor {
   }
 
   // Constructs a struct from named values
-  // @Nullable
+  @Nullable
   public static Value createStruct(List<Value> valueList) {
     try {
       List<byte[]> serializedValueList = new ArrayList<byte[]>();
@@ -225,18 +227,31 @@ public final class Constructor {
     return modelConfig.build();
   }
 
+  @Nullable
+  public static Value createWolframAlpha(String appId) {
+    try {
+      byte[] value = nativeCreateWolframAlpha(appId);
+      if (value == null) {
+        return null;
+      }
+      return Value.parseFrom(value, getExtensionRegistry());
+    } catch (InvalidProtocolBufferException e) {
+      return null;
+    }
+  }
+
   public static Value createGeminiModelConfigForGoogleAiStudio(
       String apiKey, String endpoint, String jsonRequestTemplate) {
-    Map<String, Object> map =
-        Map.of(
+    ImmutableMap<String, Object> map =
+        ImmutableMap.of(
             "api_key", apiKey, "endpoint", endpoint, "json_request_template", jsonRequestTemplate);
     return createModelConfig(map);
   }
 
   public static Value createGeminiModelConfigForVertexAi(
       String accessToken, String endpoint, String jsonRequestTemplate) {
-    Map<String, Object> map =
-        Map.of(
+    ImmutableMap<String, Object> map =
+        ImmutableMap.of(
             "access_token",
             accessToken,
             "endpoint",
@@ -248,8 +263,8 @@ public final class Constructor {
 
   public static Value createMediaPipeLlmInferenceModelConfig(
       String modelPath, int maxTokens, int topK, float temperature, int randomSeed) {
-    Map<String, Object> map =
-        Map.of(
+    ImmutableMap<String, Object> map =
+        ImmutableMap.of(
             "model_path",
             modelPath,
             "max_tokens",
@@ -265,10 +280,17 @@ public final class Constructor {
 
   public static Value createOpenAiModelConfig(
       String apiKey, String endpoint, String requestJsonTemplate) {
-    Map<String, Object> map =
-        Map.of(
+    ImmutableMap<String, Object> map =
+        ImmutableMap.of(
             "api_key", apiKey, "endpoint", endpoint, "json_request_template", requestJsonTemplate);
     return createModelConfig(map);
+  }
+
+  public static Value createLlamaModelConfig(String modelPath, int numThreads, int maxTokens) {
+    ImmutableMap<String, Object> map =
+        ImmutableMap.of(
+            "model_path", modelPath, "num_threads", numThreads, "max_tokens", maxTokens);
+    return Constructor.createModelConfig(map);
   }
 
   private static native byte[] nativeCreateModelInference(String modelUri);
@@ -294,6 +316,8 @@ public final class Constructor {
   private static native byte[] nativeCreateStruct(List<byte[]> functionList);
 
   private static native byte[] nativeCreateCall(byte[] fn, byte[] arg);
+
+  private static native byte[] nativeCreateWolframAlpha(String appId);
 
   private Constructor() {}
 }
